--- a/appconfig.json
+++ b/appconfig.json
@@ -1,11 +1,11 @@
 {
-	"appName": "Bank value calculator",
-	"description": "This app will calculate the value of the items in your bank",
+	"appName": "Materials Tracker",
+	"description": "This app will read your bank for damages artefacts, material storage for materials, and calculate required materials",
 	"appUrl": "https://dirhazg.github.io/bank-checker/",
 	"configUrl": "https://dirhazg.github.io/bank-checker/appconfig.json",
-	"iconUrl": "https://dirhazg.github.io/bank-checker/icon.png",
-	"defaultWidth": 300,
-	"defaultHeight": 300,
+	"iconUrl": "https://dirhazg.github.io/bank-checker/images/rchaeology.png",
+	"defaultWidth": 400,
+	"defaultHeight": 1000,
 	"minWidth": 200,
 	"minHeight": 200,
 	"maxWidth": 1000,
